--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,13 @@
-# UCI-HAR-Tidy
-Final assignment of the Getting &amp; Cleaning Data course
+---
+title: "README"
+author: "Silver"
+date: "7/26/2020"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
 ## The project
 
@@ -15,5 +23,5 @@ The script assumes that you have the UCI HAR Dataset in your working directory a
 
 ## Raw data and output
 
-Information about these is provided in CodeBook.md
+Information about these is provided in CodeBook.Rmd
 
